[package]
name = "haiku"
version = "0.1.1"
authors = ["Niels Sascha Reedijk <niels.reedijk@gmail.com>"]
description = """
Implementation of the Haiku API in Rust
"""
repository = "https://github.com/nielx/haiku-rs"
homepage = "https://haiku-os.org/"
categories = ["api-bindings", "os"]
license = "MIT"
readme = "README.md"

[dependencies]
haiku-sys = { path = "haiku-sys", version = "0.1.0" }
lazy_static = "1.2.0"
libc = "0.2.48"

[dev-dependencies]
tempfile = "3.0.6"
