[package]
name = "haiku"
version = "0.2.0"
authors = ["Niels Sascha Reedijk <niels.reedijk@gmail.com>"]
description = """
Implementation of the Haiku API in Rust
"""
repository = "https://github.com/nielx/haiku-rs"
homepage = "https://haiku-os.org/"
categories = ["api-bindings", "os"]
license = "MIT"
readme = "README.md"

[dependencies]
haiku-sys = { path = "haiku-sys", version = "0.2.0" }
lazy_static = "1.4"
libc = "0.2.66"

[dev-dependencies]
tempfile = "3.1"
getopts = "0.2"
